	PR gas/11733 	* config/tc-sh.c (find_cooked_opcode): Correct array bounds check.